# datev-types-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: sample.rs
src/: buchung.rs  debkred.rs  header.rs  lib.rs
test-data/: README.md
