[package]
name = "datev-types"
version = "0.3.0"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT"
repository = "https://github.com/JensWalter/datev-types-rs/"
documentation = "https://docs.rs/datev-types-rs"
description = "Provides the DATEV format types including some serialization."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
validator = { version = "0.14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = "1.1"
lazy_static = "1.4"
regex = "1.5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
encoding_rs = "0.8"
